# rs-mdbook-obsidian-links

./: .gitignore  Cargo.toml  README.md
src/: main.rs
