# [package]
# name = "mdbook-obsidian-links"
# version = "0.1.0"
# edition = "2024"
#
# [dependencies]
# # mdbook = "0.5.2"
# serde_json = "1.0"
# regex = "1.10"
#
# mdbook = { version = "0.5.2", default-features = false, features = ["search"] }


[package]
name = "mdbook-obsidian-links"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
